# haskell-reversi-game

./: LICENSE
Game/: Disc.hs  Grid.hs  Util.hs
docs/: client.txt  swagger-docs.yaml  tasks.txt
game-reversi-server/: README.md  game-reversi-server.cabal  run-server.py  stack.yaml
game-reversi-server/app/: Main.hs
game-reversi-server/lib/GameLogic/: Disc.hs  Grid.hs  Print.hs  Util.hs
game-reversi-server/lib/GameReversiServer/: API.hs  Authentication.hs  Handlers.hs  Persist.hs  Types.hs
game-reversi-server/lib/GameReversiServer/Authentication/: Token.hs
reversi-frontend-telegram/: .gitignore  ChangeLog.md  LICENSE  README.md  package.yaml  reversi-frontend-telegram.cabal  stack.yaml
reversi-frontend-telegram/app/: Main.hs
