name:           reversi-frontend-telegram
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/ratijas/reversi-frontend-telegram#readme>
homepage:       https://github.com/ratijas/reversi-frontend-telegram#readme
bug-reports:    https://github.com/ratijas/reversi-frontend-telegram/issues
author:         richard feynman
maintainer:     pingme@gmail.com
copyright:      copy
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10
extra-source-files:
    ChangeLog.md
    README.md

library
  hs-source-dirs:    src
  exposed-modules:   Lib
  ghc-options:       -Wall -fno-warn-unused-imports
  build-depends:     base >=4.7 && <5
                   , telegram-api
  default-language:  Haskell2010

executable reversi-frontend-telegram-exe
  main-is:           Main.hs
  hs-source-dirs:    app
  ghc-options:       -threaded -rtsopts -with-rtsopts=-N
  build-depends:     base >=4.7 && <5
                   , reversi-frontend-telegram
                   , telegram-api
                   , http-client
                   , http-client-tls
                   , text
  default-language: Haskell2010
